<resources>
    <string name="app_name">ChatApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fullname">Fullname</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="loading_application">Loading application..</string>
    <string name="image">image</string>
    <string name="action_logout">Logout</string>
    <string name="type_a_message">Type message</string>
    <string name="just_now">Just now</string>
    <string name="dummy_text">Hello u Dere????</string>
    <string name="dummy_name">Bapi</string>
    <string name="action_attach">Attach</string>
    <string name="action_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="groups">Groups</string>
    <string name="_2_min_ago">2 min ago</string>
    <string-array name="folders_name">
        <item>Sent</item>
        <item>Received</item>
    </string-array>
    <string name="server_key">key=AAAAutjgRd0:APA91bF-0Eo8AQhDPFv1q0hPCmB0vBrYaMA9_l0IYH_vi6gXdJv9JKM6m9BRgJjbjuBktd07HXLUsOae7sjGZAWDeJ-BE8d1SUVOmcMZFbo4vWzM0tvo-ON-G_JQqfhqPetc6IpxZGXB</string>
    <string name="fcm_url">https://fcm.googleapis.com/fcm/send</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_picture">Take picture</string>
</resources>
