<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyt_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/lyt_thread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        app:cardUseCompatPadding="true"
        app:cardElevation="@dimen/d4"
        app:cardCornerRadius="@dimen/d4"
        app:contentPadding="@dimen/d4">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="3dp">

            <TextView
                android:id="@+id/sender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_name"
                android:textColor="@color/colorOrange"
                android:textSize="12sp"
                android:layout_marginBottom="5dp"
                app:fontFamily="roboto"/>

            <TextView
                android:id="@+id/text_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_text"
                android:textColor="@color/darktext"
                android:textSize="16sp"
                app:fontFamily="roboto"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:gravity="end|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/just_now"
                    android:textColor="@color/colorPrimary"
                    app:fontFamily="roboto"
                    android:textSize="12sp"/>

                <ImageView
                    android:id="@+id/chat_status"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/single_tick"
                    android:visibility="visible"
                    android:contentDescription="@string/image" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>